# ic_lab2

./: README.md
Parte2_3/: AudioCodec.cpp  AudioCodec.h  CMakeLists.txt  GolombCoding.cpp  GolombCoding.h  WAVFile.cpp  WAVFile.h  audio_test.cpp  compile.bat  main.cpp
Parte4/: BitStream.cpp  BitStream.h  CMakeLists.txt  ImageCodec.cpp  ImageCodec.h  airplane_original_gray.ppm  airplane_ppm.compressed  comp.py  compare_images.py  main.cpp  test_predictors.py
parte1/ex1/: README.md  convert_to_png.sh  extract_channel  extract_channel.cpp
parte1/ex2/: README.md  image_transforms  image_transforms.cpp
